Errors updates and final content sesh
List of errors and their prototype links are on the ticket CID-17213

--- a/app/views/discovery-2023/check-user/confirm-my-details.html
+++ b/app/views/discovery-2023/check-user/confirm-my-details.html
@@ -118,7 +118,7 @@ Confirm your details
           
           </div>
       
-          <button class="nhsuk-button full-width nhsuk-u-margin-top-4" type="submit" id="submitButton">
+          <button class="nhsuk-button full-width nhsuk-u-margin-top-4" type="submit">
             Continue
           </button>
           
