--- a/app/views/discovery-2023/create-account/steps-completed.html
+++ b/app/views/discovery-2023/create-account/steps-completed.html
@@ -50,7 +50,7 @@ You have set up an NHS login
                     </p>
 
                       <a href="https://www.nhsapp.service.nhs.uk/login" target="_blank" role="button" draggable="false" class="nhsuk-button">
-                        Log in
+                        Continue to NHS App
                       </a>
 
                     <h2 class="nhsuk-heading-s">Help with NHS login</h2>
