--- a/app/views/discovery-2023/email/reset-password.html
+++ b/app/views/discovery-2023/email/reset-password.html
@@ -1,7 +1,7 @@
 {% extends '../layouts/layout-email.html' %}
 
 {% block pageTitle %}
-Reset your password
+Email: Reset your password
 {% endblock %}
 
 {% block content %}
