--- a/app/views/discovery-2023/email/success-uplift.html
+++ b/app/views/discovery-2023/email/success-uplift.html
@@ -1,7 +1,7 @@
 {% extends '../layouts/layout-email.html' %}
 
 {% block pageTitle %}
-  You now have an NHS login
+Email: You now have an NHS login
 {% endblock %}
 
 {% block content %}
@@ -9,26 +9,18 @@
     <div class="nhsuk-grid-column-full">
 
       <p>
-        Subject: You now have an NHS login
+        Subject: You have set up an NHS login
       </p>
 
       <hr>
 
       <h1 class="nhsuk-fieldset__legend--l">
-       You now have an NHS login
+        You have set up an NHS login
       </h1>
                   
       <p>
-        You have passed our checks and can now use your NHS login to access the: 
+        You have passed our checks and can now use your NHS login to access the NHS App: <a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a>
       </p>
-      <ul>
-        <li>
-          <p>NHS App - <a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a></p>
-        </li>
-        <li>
-          <p>NHS website - <a href="https://www.nhs.uk/">https://www.nhs.uk/</a></p>
-        </li>
-      </ul>
 
       <p>
         You can also use the service your GP has recommended and other digital health and care services.
