--- a/app/views/discovery-2023/error/account-disabled.html
+++ b/app/views/discovery-2023/error/account-disabled.html
@@ -35,12 +35,9 @@ There is a problem
 
           <p>You will not be able to use your NHS login until we have fixed the problem. This is to keep your health information secure.</p>
 
-          <p>Reference: <strong>CID2014</strong></p>
+          <p>If this issue persists <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a>.
 
-          <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p><a href="#">What does reference CID2014 mean?</a></p>
-          </div>
+          <p>Reference: <strong>CID11002</strong></p>
 
     </div>  
   </div>
