--- a/app/views/discovery-2023/error/lockoutotp.html
+++ b/app/views/discovery-2023/error/lockoutotp.html
@@ -31,11 +31,9 @@ You cannot continue
 
       <h1>You cannot continue</h1>  
 
-          <p>You have entered a wrong security code too many times.</p>
+          <p>You have asked for a security code too many times.</p>
 
-          <p>You must wait 15 minutes before you can try again.</p>
-      
-      <p>Reference: <b>CID1124</b></p>
+          <p>You must wait <strong>15 minutes</strong> before you can try again by using the link in the email.</p>
       
     </div>  
   </div>
