--- a/app/views/discovery-2023/error/partial-details-match.html
+++ b/app/views/discovery-2023/error/partial-details-match.html
@@ -61,16 +61,16 @@
             If your name is wrong, you should contact your GP surgery to update your details. They will also update these details on your NHS record.
           </p>
           <p class="nhsuk-body">
-            If all of these details are wrong, <a>contact us and let us know</a>.
+            If all of these details are wrong, <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us and let us know</a>.
           </p>
 
           <div class="nhsuk-inset-text">
             <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>Reference: <strong>CID1005</strong></p>
+            <p>Reference: <strong>CID11005</strong></p>
           </div>
           
           <p class="nhsuk-body">
-            You can select <em>Continue</em> and prove who you are, but you may not be approved if some of the details shown here are wrong.
+            You can select <strong>Continue</strong> and finish setting up your account.
           </p>
 
           <button class="nhsuk-button full-width nhsuk-u-margin-top-4" type="submit">
