--- a/app/views/discovery-2023/error/pds-no-match.html
+++ b/app/views/discovery-2023/error/pds-no-match.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-You already have an NHS login
+We cannot find a NHS record that matches your details
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,21 +29,13 @@ You already have an NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>You already have an NHS login</h1>  
+      <h1>We cannot find a NHS record that matches your details</h1>  
 
             <p>
-You do not have to respond to the invite in your email.
-      </p>
-      
-      <p>
-This is because you have already set up an NHS login using that email address.
-      </p>
+              You will need to contact your GP surgery and ask them to check the details on your NHS record.
+            </p>
 
-      <p>
-Go back to the website or app you were trying to access and log in with your email address and password.
-      </p>
-
-      <p>Reference: <b>CID1103</b></p>
+            <p>Reference: <b>CID11007</b></p>
 
 
     </div>  
