--- a/app/views/discovery-2023/error/timeout.html
+++ b/app/views/discovery-2023/error/timeout.html
@@ -33,7 +33,7 @@ Your session has ended
 
           <p>This is to keep your information secure, because you have been inactive on NHS login for <strong>60 minutes</strong>.</p>
 
-          <p>To continue, close the website or app you were trying to access and login again</p>
+          <p>To continue, try using the link in the email again.</p>
 
     </div>  
   </div>
