--- a/app/views/discovery-2023/error/wrong-details.html
+++ b/app/views/discovery-2023/error/wrong-details.html
@@ -59,7 +59,7 @@ This NHS record does not match your details
           </div>
 
           <p class="nhsuk-body">
-            If you are sure these are not your details, <a>contact us and let us know</a>.
+            If you are sure these are not your details, <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us and let us know</a>.
           </p>
           <p class="nhsuk-body">
             If you chose this option by mistake, <a href="/nhslogin/P5/confirm-details">go back and change your answer</a>.
@@ -67,7 +67,7 @@ This NHS record does not match your details
         
           <div class="nhsuk-inset-text">
             <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>Reference: <strong>CID1005</strong></p>
+            <p>Reference: <strong>CID11005</strong></p>
           </div>
  
 
