--- a/app/views/discovery-2023/error/wrongotp.html
+++ b/app/views/discovery-2023/error/wrongotp.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-There was a problem
+You cannot continue
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,14 +29,13 @@ There was a problem
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>There was a problem</h1>  
+      <h1>You cannot continue</h1>  
 
-          <p>You have entered a wrong security code.</p>
+          <p>You have entered a wrong security code too many times.</p>
 
-          <p><a href="../setup/otp">Send a new code</a>.</p>
+          <p>You must wait <strong>15 minutes</strong> before you can try again by using the link in the email.</p>
       
-      <p>Reference: <b>CID1121</b></p>
-
+          <!--<p>Reference: <b>CID1124</b></p>-->
     </div>  
   </div>
     </div>
