--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,6 +55,12 @@
               <li class="nhsuk-contents-list__item">
                 <a class="nhsuk-contents-list__link" href="discovery-2023/email/existing-account-recovery">Existing account recovery email</a>
               </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="discovery-2023/email/success-new-account">Succes new account</a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="discovery-2023/email/success-uplift">Succes uplift (same as new account)</a>
+              </li>
             </ol>
             <details class="nhsuk-details">
               <summary class="nhsuk-details__summary">
@@ -65,26 +71,28 @@
               <div class="nhsuk-details__text">
                 <p>The same checks are done to see if a user has changed state since the GP checks (journey 1), these screens are shown to the user.</p>
                 <ul>
-                  <li><a href="discovery-2023/error/alreadyhaveaccount">Already have an acount</a></li>
                   <li><a href="discovery-2023/error/expired">Already uplifted (same as link expired)</a></li>
                   <li><a href="discovery-2023/error/account-disabled">Account disabled</a></li>
                   <li><a href="discovery-2023/error/account-disabled-dead">Account disabled - User dead</a></li>
-                  <li><a href="discovery-2023/error/duplicate-account-p0">Duplicate accounts - P0</a></li>
+                  <li><a href="discovery-2023/error/already-account-email">Duplicate email</a></li>
+                  <li><a href="discovery-2023/error/already-account-p5">Duplicate NHS number/P5 account exists</a></li>
                   <!-- duplicate-account-p0 = duplicate-mobile-notification -->
                   <li><a href="discovery-2023/error/expired">Link expired (same as already uplifted)</a></li>
                   <li><a href="discovery-2023/error/generic">Generic error</a></li>
-                  <li><a href="discovery-2023/error/lockout">Lockout</a></li>
                   <li><a href="discovery-2023/error/expiredotp">OTP expired</a></li>
                   <li><a href="discovery-2023/error/lockoutotp">OTP lockout</a></li>
+                  <li><a href="discovery-2023/error/pds-no-match">PDS data doesn't match</a></li>
+                  <li><a href="discovery-2023/error/pds-mobile-change">PDS mobile no longer matches</a></li>
                   <li><a href="discovery-2023/error/timeout">Timeout</a></li>
                   <li><a href="discovery-2023/error/wrongotp">Wrong code entered</a></li>
+                  <li><a href="discovery-2023/error/wrong-password">Wrong password</a></li>
                 </ul>
                 <p>P5 only details error screens</p>
                 <ul>
                   <li><a href="discovery-2023/error/duplicate-account-p5">Duplicate accounts - P5</a></li>
                   <!-- duplicate-account-p5 = duplicate-nhsnumber-notification -->
                   <li><a href="discovery-2023/error/partial-details-match">Some of these details are wrong</a></li>
-                  <li><a href="discovery-2023/error/wrong-match">Wrong details</a></li>
+                  <li><a href="discovery-2023/error/wrong-details">Wrong details</a></li>
                 </ul>
                 <p>Other error triggers</p>
                 <ul>
