--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -1,7 +1,7 @@
 {% extends '../layouts/layout-email.html' %}
 
 {% block pageTitle %}
-Account details reminder from NHS login
+Email: Account details reminder from NHS login
 {% endblock %}
 
 {% block content %}
