--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -1,7 +1,7 @@
 {% extends '../layouts/layout-email.html' %}
 
 {% block pageTitle %}
-  Invite to set up your NHS login
+Email: Invite to set up your NHS login
 {% endblock %}
 
 {% block content %}
