--- a/app/views/discovery-2023/error/account-disabled-dead.html
+++ b/app/views/discovery-2023/error/account-disabled-dead.html
@@ -33,12 +33,9 @@ There is a problem
 
           <p>Your NHS login may have been disabled.</p>
 
-          <p>Reference: <strong>CID2012</strong></p>
+          <p>If this issue persists <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a>.
 
-          <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p><a href="#">What does reference CID2012 mean?</a></p>
-          </div>
+          <p>Reference: <strong>CID11001</strong></p>
 
     </div>  
   </div>
