--- a/app/views/discovery-2023/error/pds-mobile-change.html
+++ b/app/views/discovery-2023/error/pds-mobile-change.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-Security code expired
+We cannot set up your NHS login right now
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,15 +29,18 @@ Security code expired
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>Security code expired</h1>  
+      <h1>We cannot set up your NHS login right now</h1>  
 
-          <p>The security code you entered has expired.</p>
+            <p>
+              Your NHS login details do not match the details on your NHS record.
+            </p>
 
-          <p>It has been more than <strong>5 minutes</strong> since it was sent.</p>
+            <p>
+              You will need to contact your GP surgery and ask them to update the details on your NHS record.
+            </p>
 
-          <p><a href="../check-user/otp?resend=yes">Send a new code</a></p>
-      
-      <!--<p>Reference: <b>CID1122</b></p>-->
+            <p>Reference: <b>CID 11008</b></p>
+
 
     </div>  
   </div>
