--- a/app/views/discovery-2023/check-user/confirm-my-details.html
+++ b/app/views/discovery-2023/check-user/confirm-my-details.html
@@ -9,15 +9,16 @@ Confirm your details
   <div class="nhsuk-grid-column-two-thirds nhsuk-u-margin-bottom-4">
 
     <!-- ERROR SUMMARY OPEN -->
+    <!-- for error summary do not remove- it is triggered by javascript and is otherwise hidden -->
 
-<div id="errorSummary" style="display: block;" class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+<div id="errorSummary" style="display: none;" class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
   <h2 class="nhsuk-error-summary__title" id="error-summary-title">
     There is a problem
   </h2>
   <div class="nhsuk-error-summary__body">
     <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
       <li>
-        <a id="summaryErrorMessageContent" href="#checkDetails">Select an option</a>
+        <a id="summaryErrorMessageContent" href="#errorMessageContainer">Select an option</a>
       </li>
     </ul>
   </div>
@@ -75,7 +76,8 @@ Confirm your details
           </table>
           </div>
 
-          <div class="nhsuk-form-group nhsuk-form-group--error" id="formGroup">
+          <!-- id= formGroup necessary for javascript. Do not remove -->
+          <div class="nhsuk-form-group" id="formGroup">
 
             <fieldset class="nhsuk-fieldset">
               <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
@@ -85,7 +87,8 @@ Confirm your details
               </legend>
 
             <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
-            <span id="errorMessageContainer" class="nhsuk-error-message" style="display: block;" id="checkDetails">
+            <!-- span for error message do not remove- it is triggered by javascript and is otherwise hidden -->
+            <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="checkDetails">
               <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Select an option</span>
             </span>
             <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
@@ -117,8 +120,9 @@ Confirm your details
             </fieldset>
           
           </div>
-      
-          <button class="nhsuk-button full-width nhsuk-u-margin-top-4" type="submit">
+
+      <!-- id= submitButton added for javascript to run, do not remove -->
+          <button class="nhsuk-button full-width nhsuk-u-margin-top-4" type="submit" id="submitButton">
             Continue
           </button>
           
@@ -128,6 +132,61 @@ Confirm your details
   </div>
 </div>
 
+<script>
+  document.querySelector("#submitButton").addEventListener("click",function(e) { 
+    var isValid = inlineValidation();
 
+    if(!isValid) {
+      e.preventDefault();
+    }
+  })
+
+  function showErrorSummary(errorMessage) {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "block";
+    if(errorMessage) {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
+    }
+    else {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
+    }
+    
+  }
+
+  function hideErrorSummary() {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+  }
+
+  function showInputError(errorMessage) {
+    var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+
+    if(errorMessage) {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
+    }
+
+    else {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
+    }
+  }
+
+  function hideInputError() {
+    var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
+  }
+
+  function inlineValidation() {
+    var radioValue1 = document.querySelector("#checkDetailsYes").checked;
+    var radioValue2 = document.querySelector("#checkDetailsNo").checked;
+    var radioValue3 = document.querySelector("#checkDetailsSome").checked;
+    
+    if(radioValue1 === false &&  radioValue2 === false && radioValue3 === false) {
+      showErrorSummary("Select an option");
+      showInputError("Select an option");
+      return false;
+    }
+
+    return true;
+  }
+</script>
 
 {% endblock %}
