--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -34,19 +34,20 @@ Create a password
         Create a password
       </h1>
 
-      <p class="nhsuk-body">Your password must have:
-        <ul>
-          <li>have 8 characters or more</li>
-          <li>have 1 UPPERCASE letter or more</li>
-          <li>not start or end with a blank space</li>
-        </ul>
-      </p>
-
       <!-- input 1: create password -->
       <div id="formGroup">
         <label class="nhsuk-label" for="createPassword">
               Create a password
         </label>
+        <div class="nhsuk-hint">
+          <p class="nhsuk-body">Your password must have:
+            <ul>
+              <li>have 8 characters or more</li>
+              <li>have 1 UPPERCASE letter or more</li>
+              <li>not start or end with a blank space</li>
+            </ul>
+          </p>
+        </div>
         <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
         <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="createPassword-error">
           <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter a password</span>
