update existing-account-uplift email
Update route to spinner

--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -57,7 +57,7 @@ Email: Finish setting up your NHS login
 
       {% else %}
 
-      <a href="../check-user/spinner-set-up.html" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <a href="../check-user/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
       <p><a href="../check-user/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
       
       {% endif %}
