--- a/app/views/discovery-2023/check-user/steps-finish-set-up.html
+++ b/app/views/discovery-2023/check-user/steps-finish-set-up.html
@@ -11,7 +11,7 @@ Next steps
 
 
 
-      <form action="confirm-my-details" method="post" class="form">
+      <form action="confirm-my-details" class="form">
         <fieldset class="nhsuk-fieldset">
           
         
