Update otp routing
Add routing to spinner

--- a/app/views/discovery-2023/check-user/otp.html
+++ b/app/views/discovery-2023/check-user/otp.html
@@ -95,7 +95,7 @@ Enter the 6 digit security code
         </div>
 
         <!-- id= submitButton added for javascript to run, do not remove -->
-        <a id="submitButton" href="steps-finish-set-up" role="button" draggable="false" class="nhsuk-button">
+        <a id="submitButton" href="spinner-check" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
