Update invite new account param
Add param for routing

--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -55,8 +55,8 @@ Email: Invite to set up your NHS login
 
       {% else %}
 
-      <a href="../check-user/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../check-user/spinner-set-up" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
+      <a href="../check-user/spinner-set-up?journey=new" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../check-user/spinner-set-up?journey=new" target="_blank">https://provisioning.login.nhs.uk/finish-set-up/</a></p>
       
       {% endif %}
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
