--- a/app/views/discovery-2023/check-user/steps-finish-set-up.html
+++ b/app/views/discovery-2023/check-user/steps-finish-set-up.html
@@ -11,7 +11,7 @@ Next steps
 
 
 
-      <form action="confirm-my-details" class="form">
+      <form action="spinner-check" class="form">
         <fieldset class="nhsuk-fieldset">
           
         
@@ -35,7 +35,7 @@ Next steps
                   <div class="service-access__item__desc">
                     <p>Confirm the details we have for you are correct and enter a password to finish setting up.</p>
                   </div>
-                  <button data-redirect="confirm-my-details" class="nhsuk-button full-width" >Continue</button>
+                  <button data-redirect="spinner-check" class="nhsuk-button full-width" >Continue</button>
               </li>
             </ol>
           
