--- a/app/views/discovery-2023/check-user/spinner-check.html
+++ b/app/views/discovery-2023/check-user/spinner-check.html
@@ -9,7 +9,7 @@ Checking details
 {% block content %}
   <div class="nhsuk-grid-row">
       <div class="nhsuk-width-container">
-         <h1 class="nhsuk-heading-l">Checking details</h1>
+         <h1 class="nhsuk-heading-l">Checking if you are registered</h1>
      
       <form action="auth" method="post">
         <section class="loading-container" id="gp-connect-0" style="display:block; min-height: 16em;">
@@ -70,7 +70,7 @@ Checking details
 
 <script>
   setTimeout(function(){
-    window.location.href='steps-finish-set-up';
+    window.location.href='confirm-my-details';
 }, 2500);
 </script>
 
