Disabled account errors update

--- a/app/views/discovery-2023/error/account-disabled-dead.html
+++ b/app/views/discovery-2023/error/account-disabled-dead.html
@@ -33,7 +33,7 @@ There is a problem
 
           <p>Your NHS login may have been disabled.</p>
 
-          <p>If this issue persists <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a>.
+          <p>Try again and then <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a> if you still cannot access your account.
 
           <p>Reference: <strong>CID11001</strong></p>
 
