--- a/app/views/discovery-2023/error/account-disabled.html
+++ b/app/views/discovery-2023/error/account-disabled.html
@@ -35,7 +35,7 @@ There is a problem
 
           <p>You will not be able to use your NHS login until we have fixed the problem. This is to keep your health information secure.</p>
 
-          <p>If this issue persists <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a>.
+          <p>Try again and then <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a> if you still cannot access your account.
 
           <p>Reference: <strong>CID11002</strong></p>
 
