Steps screen titles

--- a/app/views/discovery-2023/check-user/steps-finish-set-up.html
+++ b/app/views/discovery-2023/check-user/steps-finish-set-up.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Next steps
+Finish setting up your NHS login
 {% endblock %}
 
 {% block content %}
