--- a/app/views/discovery-2023/check-user/confirm-my-details.html
+++ b/app/views/discovery-2023/check-user/confirm-my-details.html
@@ -112,7 +112,7 @@ Confirm your details
                 <div class="nhsuk-radios__item">
                   <input class="nhsuk-radios__input" id="checkDetailsSome" name="checkDetails" type="radio" value="some">
                   <label class="nhsuk-label nhsuk-radios__label" for="checkDetailsSome">
-                    These are my details but some are wrong
+                    These are my details, but some are wrong
                   </label>
                 </div>
 
