Disabled dead and already P9 errors

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,16 +73,18 @@
                 <ul>
                   <li><a href="discovery-2023/error/expired">Already uplifted (same as link expired)</a></li>
                   <li><a href="discovery-2023/error/account-disabled">Account disabled</a></li>
-                  <li><a href="discovery-2023/error/account-disabled-dead">Account disabled - User dead</a></li>
+                  <li><a href="discovery-2023/error/account-disabled-dead-with-account">Account disabled - User dead with account</a></li>
+                  <li><a href="discovery-2023/error/account-disabled-dead-no-account">Account disabled - User dead without account</a></li>
                   <li><a href="discovery-2023/error/already-account-email">Duplicate email</a></li>
                   <li><a href="discovery-2023/error/already-account-p5">Duplicate NHS number/P5 account exists</a></li>
                   <!-- duplicate-account-p0 = duplicate-mobile-notification -->
-                  <li><a href="discovery-2023/error/expired">Link expired (same as already uplifted)</a></li>
                   <li><a href="discovery-2023/error/generic">Generic error</a></li>
+                  <li><a href="discovery-2023/error/expired">Link expired (same as already uplifted)</a></li>
                   <li><a href="discovery-2023/error/expiredotp">OTP expired</a></li>
                   <li><a href="discovery-2023/error/lockoutotp">OTP lockout</a></li>
                   <li><a href="discovery-2023/error/pds-no-match">PDS data doesn't match</a></li>
                   <li><a href="discovery-2023/error/pds-mobile-change">PDS mobile no longer matches</a></li>
+                  <li><a href="discovery-2023/error/already-account-p9">P9 account already exists</a></li>
                   <li><a href="discovery-2023/error/timeout">Timeout</a></li>
                   <li><a href="discovery-2023/error/wrongotp">Wrong code entered</a></li>
                   <li><a href="discovery-2023/error/wrong-password">Wrong password</a></li>
