--- a/app/views/discovery-2023/error/already-account-p9.html
+++ b/app/views/discovery-2023/error/already-account-p9.html
@@ -40,17 +40,10 @@ There is a problem
 
                 <h2 class="nhsuk-heading-s">Help with accessing your NHS login account</h2>
                 <p>
-                  <ul class="nhsuk-list nhsuk-list--bullet" style="font-size:18px">
-                    <li>
-                      To change your NHS login details and password or delete your NHS login if you no longer want to use it, <a href="https://settings.login.nhs.uk/">visit settings</a>
-                    </li>
-                    <li>
-                      Find out more about what you can do if you have lost access to your mobile phone number on the <a>NHS login help centre</a>.
-                    </li>
-                    <li>
-                      If you have technical issues, <a href="https://help.login.nhs.uk/">visit the NHS login help centre</a>
-                    </li>
-                  </ul>
+                  To change the email, password or phone number you use to log in visit <a href="https://settings.login.nhs.uk/">NHS login and security settings</a>.
+                </p>
+                <p>
+                  If you have lost access to your phone number you can find help on the <a href="https://help.login.nhs.uk/">NHS login help centre</a>.
                 </p>
               </div>
             </div>
