Steps past tense content updates

--- a/app/views/discovery-2023/check-user/steps-finish-set-up.html
+++ b/app/views/discovery-2023/check-user/steps-finish-set-up.html
@@ -24,10 +24,10 @@ Finish setting up your NHS login
                   </div>	
                 </li> 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get a security code</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">You entered a security code</h3>
                   <div class="service-access__item__desc">	
                   </div>	
-                </li> 
+                </li>  
 
               <li class="service-access__item active">
                   <p class="service-access__item__title__text__leftandright"><b>Next step</b></p>
