--- a/app/views/discovery-2023/error/already-account-p9.html
+++ b/app/views/discovery-2023/error/already-account-p9.html
@@ -29,26 +29,26 @@ There is a problem
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>There is a problem</h1>  
+      <h1>There is already an NHS login account</h1>
 
+        <p>
+          You do not need to do anything. If you have already set up an NHS login, you can use it to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
+        </p>
+
+        <div class="nhsuk-card">
+          <div class="nhsuk-card__content">
+
+            <h2 class="nhsuk-heading-s">Help with accessing your NHS login account</h2>
             <p>
-              You already have an NHS login account.
+              To change the email, password or phone number you use to log in visit <a href="https://settings.login.nhs.uk/">NHS login and security settings</a>.
             </p>
+            <p>
+              If you have lost access to your phone number you can find help on the <a href="https://help.login.nhs.uk/">NHS login help centre</a>.
+            </p>
+          </div>
+        </div>
 
-            <div class="nhsuk-card">
-              <div class="nhsuk-card__content">
-
-                <h2 class="nhsuk-heading-s">Help with accessing your NHS login account</h2>
-                <p>
-                  To change the email, password or phone number you use to log in visit <a href="https://settings.login.nhs.uk/">NHS login and security settings</a>.
-                </p>
-                <p>
-                  If you have lost access to your phone number you can find help on the <a href="https://help.login.nhs.uk/">NHS login help centre</a>.
-                </p>
-              </div>
-            </div>
-
-            <p>Reference: <b>CID11004</b></p>
+        <p>Reference: <b>CID11005</b></p>
 
 
     </div>  
