--- a/app/views/discovery-2023/existing-uplift/steps-completed.html
+++ b/app/views/discovery-2023/existing-uplift/steps-completed.html
@@ -24,12 +24,12 @@ You have set up an NHS login
                   </div>	
                 </li> 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Get a security code</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">You entered a security code</h3>
                   <div class="service-access__item__desc">	
                   </div>	
                 </li> 
                 <li class="service-access__item completed"> 
-                  <h3 class="service-access__item__title ticked" style="font-size:18px">Finish setting up your NHS login</h3>
+                  <h3 class="service-access__item__title ticked" style="font-size:18px">You finished setting up your NHS login</h3>
                   <div class="service-access__item__desc">	
                   </div>	
                   </li> 
