Final content update

--- a/app/views/discovery-2023/error/already-account-p9.html
+++ b/app/views/discovery-2023/error/already-account-p9.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-There is a problem
+You already have an NHS login account
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,10 +29,10 @@ There is a problem
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>There is already an NHS login account</h1>
+      <h1>You already have an NHS login account</h1>
 
         <p>
-          You do not need to do anything. If you have already set up an NHS login, you can use it to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
+          You can use your NHS login to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
         </p>
 
         <div class="nhsuk-card">
