Content slips fix

--- a/app/views/discovery-2023/error/pds-no-match.html
+++ b/app/views/discovery-2023/error/pds-no-match.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-We cannot find a NHS record that matches your details
+We cannot find an NHS record that matches your details
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,7 +29,7 @@ We cannot find a NHS record that matches your details
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>We cannot find a NHS record that matches your details</h1>  
+      <h1>We cannot find an NHS record that matches your details</h1>  
 
             <p>
               You will need to contact your GP surgery and ask them to check the details on your NHS record.
