NHS login marked dead error update

--- a/app/views/discovery-2023/error/account-disabled-dead-no-account.html
+++ b/app/views/discovery-2023/error/account-disabled-dead-no-account.html
@@ -33,7 +33,7 @@ There is a problem
 
           <p>We were unable to set up an NHS login account for you.</p>
 
-          <p>You will need to contact your GP surgery and ask them to check the details on your NHS record.
+          <p>You will need to contact your GP surgery and ask them to check the details on your NHS record.</p>
 
           <p>Reference: <strong>CID11018</strong></p>
 
