--- a/app/views/discovery-2023/error/account-disabled-dead-with-account.html
+++ b/app/views/discovery-2023/error/account-disabled-dead-with-account.html
@@ -33,7 +33,9 @@ There is a problem
 
           <p>Your NHS login may have been disabled.</p>
 
-          <p>Try again and then <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a> if you still cannot access your account.
+          <p>Contact your GP surgery and ask them to check the details on your NHS record.</p>
+
+          <p>If you still cannot access your account <a href="https://prototype-nhs-login-help-87153c4cb7ee.herokuapp.com/contact-form/contact">contact us</a>.</p>
 
           <p>Reference: <strong>CID11001</strong></p>
 
