--- a/app/views/discovery-2023/reset-password/settings-password-advice.html
+++ b/app/views/discovery-2023/reset-password/settings-password-advice.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Check your email
+Reset your password
 {% endblock %}
 
 {% block outerContent %}
