Link to error on homepage

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,6 +77,7 @@
                   <li><a href="discovery-2023/error/account-disabled-dead-no-account">Account disabled - User dead without account</a></li>
                   <li><a href="discovery-2023/error/already-account-email">Duplicate email</a></li>
                   <li><a href="discovery-2023/error/already-account-p5">Duplicate NHS number/P5 account exists</a></li>
+                  <li><a href="discovery-2023/error/email-link-lockout">Email link lockout</a></li>
                   <!-- duplicate-account-p0 = duplicate-mobile-notification -->
                   <li><a href="discovery-2023/error/generic">Generic error</a></li>
                   <li><a href="discovery-2023/error/expired">Link expired (same as already uplifted)</a></li>
