--- a/app/views/discovery-2023/error/email-link-lockout.html
+++ b/app/views/discovery-2023/error/email-link-lockout.html
@@ -32,11 +32,11 @@ You cannot continue
       <h1>You cannot continue</h1>  
       
       <p>
-        You have clicked the link in the email too many times.
+        You have used the link in the email too many times.
       </p>
 
       <p>
-        You must wait <strong>15 minutes</strong> before you can try again by using the link in the email.
+        Wait <strong>15 minutes</strong> then try again.
       </p>
 
     </div>  
