Remove 'have' on password screen

--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -40,7 +40,7 @@ Create a password
               Create a password
         </label>
         <div class="nhsuk-hint">
-          <p class="nhsuk-body">Your password must have:
+          <p class="nhsuk-body">Your password must:
             <ul>
               <li>have 8 characters or more</li>
               <li>have 1 UPPERCASE letter or more</li>
