Error summaries amend

--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -22,7 +22,7 @@ Create a password
         <a id="summaryErrorMessageContent" href="#createPassword">Enter your password</a>
       </li>
       <li>
-        <a id="summaryErrorMessageContent2" href="#confirmPassword">Enter your password</a>
+        <a id="summaryErrorMessageContent2" href="#confirmPassword">Enter your password again to confirm it</a>
       </li>
     </ul>
   </div>
@@ -219,24 +219,24 @@ Create a password
     var inputValue2 = document.querySelector("#confirmPassword").value;
 
     if(inputValue.length === 0 && inputValue2.length === 0) {
-      showErrorSummary("You need to enter a password");
-      showInputError("You need to enter a password");
+      showErrorSummary("Enter a password");
+      showInputError("Enter a password");
       showErrorSummary2("Enter your password again to confirm it");
       showInputError2("Enter your password again to confirm it");
       return false;
     }
 
     if(inputValue.length === 0 && inputValue2.length > 0) {
-      showErrorSummary("You need to enter a password");
-      showInputError("You need to enter a password");
+      showErrorSummary("Enter a password");
+      showInputError("Enter a password");
       showErrorSummary2("Enter your password again to confirm it");
       showInputError2("Enter your password again to confirm it");
       return false;   
     }
 
     if(inputValue.length < 8 && inputValue.length > 0) {
-      showErrorSummary("Enter the password in the correct format");
-      showInputError("Enter the password in the correct format");
+      showErrorSummary("Enter a password in the correct format");
+      showInputError("Enter a password in the correct format");
       showErrorSummary2("Enter your password again to confirm it");
       showInputError2("Enter your password again to confirm it");
       return false;
@@ -249,8 +249,8 @@ Create a password
     }
 
     if(inputValue.length === 8 && inputValue.length > 0 && inputValue2.length > 0 && inputValue2.length < 8) {
-      showErrorSummary2("Enter your password again to confirm it and make sure they match");
-      showInputError2("Enter your password again to confirm it and make sure they match");
+      showErrorSummary2("Your passwords don't match, enter your password again to confirm it");
+      showInputError2("Your passwords don't match, enter your password again to confirm it");
       return false;
     }
 
