Content changes, t&cs line remove

--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -82,7 +82,7 @@ Create a password
       </div>
 
       <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px" class="nhsuk-heading-m">Agree to our terms of use​</h2>
-      <p class="small nhsuk-body" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
+      <p class="small nhsuk-body" style="margin-top: 16px;">We will collect and save your information securely.</p>
       <p class="small nhsuk-body">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
       
       <button data-redirect="spinner-confirm" class="nhsuk-button full-width" id="button--save" >Continue</button>
@@ -249,8 +249,8 @@ Create a password
     }
 
     if(inputValue.length === 8 && inputValue.length > 0 && inputValue2.length > 0 && inputValue2.length < 8) {
-      showErrorSummary2("Your passwords don't match, enter your password again to confirm it");
-      showInputError2("Your passwords don't match, enter your password again to confirm it");
+      showErrorSummary2("Your passwords do not match. Enter your password again to confirm it");
+      showInputError2("Your passwords do not match. Enter your password again to confirm it");
       return false;
     }
 
