CID number change and punctuation amends

--- a/app/views/discovery-2023/error/partial-details-match.html
+++ b/app/views/discovery-2023/error/partial-details-match.html
@@ -17,7 +17,7 @@
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend">
             <h1 class="nhsuk-heading-l">
-              These are my details but some are wrong
+              These are my details, but some are wrong
             </h1>
           </legend>
          
@@ -66,7 +66,7 @@
 
           <div class="nhsuk-inset-text">
             <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>Reference: <strong>CID11005</strong></p>
+            <p>Reference: <strong>CID11023</strong></p>
           </div>
           
           <p class="nhsuk-body">
