--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -43,7 +43,7 @@ Create a password
           <p class="nhsuk-body">Your password must:
             <ul>
               <li>have 8 characters or more</li>
-              <li>have 1 UPPERCASE letter or more</li>
+              <li>have one UPPERCASE letter or more</li>
               <li>not start or end with a blank space</li>
             </ul>
           </p>
