Label update on password

--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -37,7 +37,7 @@ Create a password
       <!-- input 1: create password -->
       <div id="formGroup">
         <label class="nhsuk-label" for="createPassword">
-              Create a password
+              Enter password
         </label>
         <div class="nhsuk-hint">
           <p class="nhsuk-body">Your password must:
