New already submitted PYI error

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -89,6 +89,7 @@
                   <li><a href="discovery-2023/error/pds-mobile-change">PDS mobile no longer matches</a></li>
                   <li><a href="discovery-2023/error/already-account-p9">P9 account already exists</a></li>
                   <li><a href="discovery-2023/error/timeout">Timeout</a></li>
+                  <li><a href="discovery-2023/error/already-pyi-in-progress">User has submitted a PYI application</a></li>
                   <li><a href="discovery-2023/error/wrongotp">Wrong code entered</a></li>
                   <li><a href="discovery-2023/error/wrong-password">Wrong password</a></li>
                 </ul>
